# Ad-Recommendation-Model

./: .gitignore  ALGORITHM_BREAKDOWN.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  DATA_FLOW_GUIDE.md  GETTING_STARTED.md  INTEREST_TRACKING_EXPLAINED.md  LINKEDIN_POST.md  ML_BEST_PRACTICES.md  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  STREAM_PROCESSOR_STATUS.md  TECH_STACK.md  check-status.ps1  docker-compose.yml  import anthropic.py  show_ml_magic.py  start.ps1  stop.ps1  test_gemini_api.py  test_pipeline.py  view-data.ps1
infrastructure/docker/postgres/init/: 01-init-databases.sh  01-init-db.sql
monitoring/prometheus/: prometheus.yml
services/event-collector/: .env.example  Dockerfile  pyproject.toml
services/event-collector/app/: __init__.py  main.py
services/event-collector/app/api/: events.py  health.py  recommendations.py
services/event-collector/app/core/: config.py  kafka_producer.py  logging.py  redis_client.py
services/event-collector/app/middleware/: rate_limit.py
services/event-collector/app/models/: event.py
services/event-collector/tests/: conftest.py  test_api.py
services/stream-processor/: pyproject.toml
services/stream-processor/app/: __init__.py  main.py
services/stream-processor/app/core/: config.py  database.py
services/stream-processor/app/kafka/: __init__.py  consumer.py
services/stream-processor/app/ml/: recommender.py
services/stream-processor/app/models/: events.py
services/stream-processor/app/processors/: __init__.py  event_processor.py
services/stream-processor/migrations/: 001_init_schema.sql
services/tracker-sdk/: demo-backup.html  demo.html  package.json  recommendations.html  rollup.config.js  tsconfig.json
services/tracker-sdk/src/: index.ts
