[tool.poetry]
name = "stream-processor"
version = "1.0.0"
description = "Event stream processor for ad recommendation platform"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.10.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
